--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 /src/main/java/com/example/test2/test5.java
+!/src/main/java/com/example/test2/test5.java
+!/.gitignore
