--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ out
 gen
 /src/main/java/com/example/test2/test8.java
 /src/main/java/com/example/test2/test9.java
+/src/main/java/com/example/test2/test10.java
