--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ gen
 /src/main/java/com/example/test2/test8.java
 /src/main/java/com/example/test2/test9.java
 /src/main/java/com/example/test2/test10.java
+/src/main/java/com/example/test2/test11.java
+/src/main/java/com/example/test2/test12.java
